hard-gists/3806329/run.log
=== Docker Run Log for 3806329 ===
Started at: Mi 29. Okt 14:00:56 CET 2025

[2025-10-29 14:00:56] START: Running container for 3806329
[2025-10-29 14:00:57] SUCCESS: Container b1261462066ea592877fbe2567fa05f97e888b6643ee45fe09c0f0105e90d7f9 started for 3806329
=== Container logs for 3806329 ===
  File "/snippet.py", line 176
    print h,'-', w
    ^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 3806329 ===
[2025-10-29 14:00:59] INFO: Container b1261462066ea592877fbe2567fa05f97e888b6643ee45fe09c0f0105e90d7f9 has stopped
